--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "commander": "^8.0.0",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "lodash": "^4.17.21",
+    "path": "^0.12.7",
+    "process": "^0.11.10"
   },
   "devDependencies": {
     "eslint": "^7.29.0",
