--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,19 @@
+plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
+  - jest
 env:
   node: true
   es2021: true
+
 extends:
-  - airbnb-base
+  - 'airbnb-base'
+  - 'plugin:jest/recommended'
+
 parserOptions:
   ecmaVersion: 12
   sourceType: module
+
 rules:
   no-console: 0
   import/extensions: 0
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
