--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "@hexlet/code",
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  },
   "version": "1.0.0",
   "description": "second project",
   "main": "index.js",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,8 +36,13 @@
     "process": "^0.11.10"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.14.7",
+    "@jest/globals": "^27.0.6",
+    "babel-jest": "^27.0.6",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4"
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "jest": "^27.0.6"
   }
 }
