--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "commander": "^8.0.0",
     "fs": "^0.0.1-security",
+    "js-yaml": "^3.14.1",
     "lodash": "^4.17.21",
     "path": "^0.12.7",
     "process": "^0.11.10"
