--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "version": "1.0.0",
   "description": "second project",
-  "main": "index.js",
+  "main": "src/index.js",
   "engines": {
     "node": ">=14"
   },
